# jni-lab

./: CMakeLists.txt  README.md  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: misaka_lab_jni_App.cpp  misaka_lab_jni_App.h
src/main/java/misaka/lab/jni/: App.java
src/test/java/misaka/lab/jni/: AppTest.java
